# Alfred

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  next.config.mjs  package.json  pyproject.toml
alfred-app/: .env.example  Dockerfile  docker-compose.yaml  main.py  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
alfred-app/app/: globals.css  layout.tsx
alfred-app/app/alfred/: page.tsx
alfred-app/app/graph/: page.tsx
alfred-app/app/settings/: page.tsx
alfred-app/app/skills/: page.tsx
alfred-app/components/alfred/: app-sidebar.tsx  attachment.tsx  runtime-provider.tsx  settings-sheet.tsx  thread-list.tsx  thread.tsx  threadlist-sidebar.tsx  tool-fallback.tsx
alfred-app/components/assistant-ui/: embeddable-fallback.tsx  markdown-text.tsx  model-selector.tsx  reasoning.tsx  select.tsx  sources.tsx  tool-group.tsx
alfred-app/components/graph/: graph-sidebar.tsx  graph-view.tsx
alfred-app/components/ui/: button.tsx  label.tsx  popover.tsx  select.tsx  sidebar.tsx  starfield.tsx  textarea.tsx  top-header.tsx
alfred-app/hooks/: use-schema.ts
alfred-app/lib/: azure.ts  crypto.ts  db.ts  user.ts  utils.ts
alfred-app/lib/ai/: azure.ts  openai.ts
alfred-app/lib/skills/: types.ts  (+1 more)
app/: page.tsx
app/alfred/: page.tsx
app/graph/: page.tsx
components/alfred/: attachment.tsx  runtime-provider.tsx  thread-list.tsx  thread.tsx
components/graph/: graph-core.ts  graph-view.tsx
lib/: db.ts  user.ts
scripts/: create_databricks_schema.ipynb  create_graph_from_databricks.ipynb
scripts/concepts/: concepts.yaml
(+48 files in other folders)
