[project]
name = "alfred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sql-connector>=2.0.2",
    "dotenv>=0.9.9",
    "neo4j>=6.1.0",
    "neo4j-graphrag>=1.13.0",
    "numpy>=2.4.2",
    "openai>=2.23.0",
    "pandas>=3.0.1",
]
